--- a/hextris/index.html
+++ b/hextris/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en' manifest="app.manifest">
 	<head>
-		<title>Hextris</title>
+		<title>Hextris Plus</title>
 		<meta name="apple-itunes-app" content="app-id=903769553"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, minimal-ui"/>
 		<link rel="icon" type="image/png" href="favicon.ico">
