--- a/Transcube/index.html
+++ b/Transcube/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="app.manifest">
 <head>
 	<title>Transcube</title>
 	<link href="css/main.css" rel="stylesheet" type="text/css">
