--- a/banners/soccer.html
+++ b/banners/soccer.html
@@ -1,2 +1,2 @@
 <style>*{margin:0;outline:0;padding:0}</style>
-<img src="2048.jpg">
+<a href="ms-windows-store://pdp/?productid=9N1JNHBGZHM8" traget="_blank"><img src="2048.jpg"></a>
