--- a/banners/soccer.html
+++ b/banners/soccer.html
@@ -1,2 +1,2 @@
 <style>*{margin:0;outline:0;padding:0}</style>
-<a href="https://www.microsoft.com/store/apps/9n1jnhbgzhm8" traget="_blank"><img src="2048.jpg"></a>
+<a href="https://www.microsoft.com/store/apps/9n1jnhbgzhm8" traget="_blank"><img src="2048_50.jpg"></a>
