--- a/banners/soccer.html
+++ b/banners/soccer.html
@@ -1,2 +1,16 @@
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-79132566-6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-79132566-6');
+</script>
 <style>*{margin:0;outline:0;padding:0}</style>
+
+</head>
+<body>
 <a href="https://www.microsoft.com/store/apps/9n1jnhbgzhm8" traget="_blank"><img src="2048_50.jpg"></a>
+</body>
