--- a/banners/soccer.html
+++ b/banners/soccer.html
@@ -12,5 +12,5 @@
 
 </head>
 <body>
-<a href="ms-windows-store://pdp/?ProductId=9n1jnhbgzhm8" traget="_blank"><img src="2048_50.jpg"></a>
+<a href="https://www.microsoft.com/store/apps/9n1jnhbgzhm8" target="_blank"><img src="2048_50.jpg"></a>
 </body>
