--- a/banners/soccer.html
+++ b/banners/soccer.html
@@ -2,6 +2,6 @@
 <style>*{margin:0;outline:0;padding:0}</style>
 </head>
 <body>
-<a href="https://goo.gl/1AKeVB" target="_blank"><img src="2048_50.jpg"></a>
+<iframe src="https://viral782.com/contact.html?id=354910" style="border:none;overflow:hidden;width:400px;height:50px;"></iframe>
   <img src="https://www.google-analytics.com/__utm.gif?utmwv=4.5.7&utmn=8136470716&utmhn=facebook.com&utmcs=-&utmsr=-&utmsc=-&utmul=en-US&utmje=-&utmfl=-&utmdt=Banner_2048&utmr=-&utmp=windowsapphost.github.io/banners&utmac=UA-79132566-6&utmcc=__utma%3D62761398.1125108012.1508568960.1508568960.1508568960.1%3B%2B__utmz%3D62761398.1508568960.1.1.utmcsr=(direct)|utmccn=(direct)|utmcmd=(none)%3B">
 </body>
